delete form  due to non-responsiveness
as it was not responsive

--- a/portfolio.css
+++ b/portfolio.css
@@ -405,7 +405,7 @@ section h2.heading {
     line-height: 1.7;
     margin: auto;
 }
-.contact{
+/* .contact{
     background-color: var(--bg-color);
 }
 .contact h2{
@@ -440,7 +440,7 @@ section h2.heading {
 
 .contact form .btn{
     margin-top: 2rem;
-}
+} */
 .footer{
     position: relative;
     bottom: 0;
