--- a/portfolio.css
+++ b/portfolio.css
@@ -538,7 +538,7 @@ padding-left: 37px;
 .timeline-dot{
     left: 0;
 }
-.services{
+.skills{
     padding-bottom: 7rem;
 }
 .contact form{
@@ -593,10 +593,10 @@ display: block;
 .home-img img{
 width: 56vw;
 }
-.services h2{
+.skills h2{
     margin-bottom: 3rem;
 }
-.services-container{
+.skills-container{
     grid-template-columns: repeat(1,1fr);
 }
 }
