--- a/portfolio.css
+++ b/portfolio.css
@@ -346,7 +346,7 @@ color: black;
 ::-webkit-scrollbar-track{
     background-color: var(--bg-color);
 }
-.services{
+.skills{
     padding:40px 0px 0px 0px ;
     background: var(--bg-color);
     color: #080808;
@@ -362,14 +362,14 @@ section h2.heading {
     color: white;
     position: relative;
 }
-.services-container{
+.skills-container{
     padding: 0px 70px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     gap: 6rem;
 }
-.services-box{
+.skills-box{
     background-color: var(--main_color);
     height: 300px;
     color: black;
@@ -378,13 +378,13 @@ section h2.heading {
     cursor: pointer;
     transition: 0.4s ease-in-out;
 }
-.services-box:hover{
+.skills-box:hover{
     background:white;
     color: black;
     border: 5px solid var(--main_color);
   transform: scale(1.03);    
 }
-.services-box .services-info{
+.skills-box .skills-info{
     display:flex;
     flex-direction: column;
     text-align: left;
@@ -393,12 +393,12 @@ section h2.heading {
     align-items: baseline;
     padding:5rem 5rem ;
 }
-.services-info h4{
+.skills-info h4{
     font-size: 3rem;
     font-weight: 800;
     line-height: 2;
 }
-.services-info p{
+.skills-info p{
     font-size: 1.6rem;
     font-weight: 600;
     max-height: 100px;
@@ -507,7 +507,7 @@ color: white;
     html{
         font-size: 55%;
     }
-    .services-container{
+    .skills-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(2,1fr);
         margin: 0 5rem;
@@ -536,7 +536,7 @@ padding-left: 37px;
 .timeline-dot{
     left: 0;
 }
-.services{
+.skills{
     padding-bottom: 7rem;
 }
 .contact form{
@@ -591,10 +591,10 @@ display: block;
 .home-img img{
 width: 56vw;
 }
-.services h2{
+.skills h2{
     margin-bottom: 3rem;
 }
-.services-container{
+.skills-container{
     grid-template-columns: repeat(1,1fr);
 }
 }
