--- a/portfolio.css
+++ b/portfolio.css
@@ -238,7 +238,7 @@ color: black;
     65%,
     80%,
     85%{
-        width: calc( 100% + 8px );
+        width: calc(100% + 8px)
     }
 }
 .heading1{
@@ -387,11 +387,11 @@ section h2.heading {
 .skills-box .skills-info{
     display:flex;
     flex-direction: column;
-    text-align:left;
+    text-align: left;
     max-height: 200px;
-    justify-content:left;
-    align-items:baseline;
-    padding:2rem 2rem ;
+    justify-content: left;
+    align-items: baseline;
+    padding:5rem 5rem ;
 }
 .skills-info h4{
     font-size: 3rem;
@@ -403,7 +403,7 @@ section h2.heading {
     font-weight: 600;
     max-height: 100px;
     line-height: 1.7;
-    margin:auto;
+    margin: auto;
 }
 /* .contact{
     background-color: var(--bg-color);
